@@ -1,3 +1,7 @@
+2011-11-08  Xavier Perseguers  <xavier@causal.ch>
+
+	* [TASK] Refactor selector.js
+
 2011-11-06  Xavier Perseguers  <xavier@causal.ch>
 
 	* [TASK] Raise version to 1.4.1
